# spore-claudecode-plugin

./: PUBLISHING.md  README.md  _sporeAlpha.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
spore-binary/: Cargo.toml
